<?xml version="1.0" encoding="utf-8"?>
<resources>


    xmlns:tools="http://schemas.android.com/tools"
    <string name="app_name">Android Labs</string>

    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="button">CLICK HERE</string>
    <string name="checkBox">Check this out!</string>
    <string name="textView">Look at my GUI</string>
    <string name="Switch">Switch on/off</string>
    <string name="hint">Type here</string>
    getResources.getString(R.string.toast_message);
    <string name="toast_message">Here is more information.</string>
    <string name="toast_message1">The Switch is now </string>
    <string name="toast_message2">The Checkbox is now </string>
    <string name="editTextEmail">Enter your email address:</string>
    <string name="textViewClick">Click the button above to take a picture</string>
    <string name="editText2">Type email here</string>
    <string name="textView3">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="yes">Enter your Email</string>
    <string name="textView6">Your Picture</string>
    <string name="pictureText">Your Picture</string>
    <string name="editText4">Enter your name</string>
    <string name="nameHint">Enter your name</string>
    <string name="editTextmail">Enter your Email</string>
    <string name="emailHint2">Enter your Email</string>

    <string name="yourName">Your Name</string>

    <string name="nameText">Your Name</string>
    <string name="yourEmail">Your Email</string>
    <string name="emailText2">Your Email</string>
    <string name="textViewProfile">Your profile</string>
    <string name="chatButton">Go to Chat</string>
    <string name="buttonSend">Send</string>
    <string name="goToChatButton"> Go to Chat</string>

    <string name="editTextLab4">Type here</string>
    <string name="buttonReceive">Receive</string>
    <string name="emailHint">Type email here</string>
    <string name="login">Login</string>
    <string name="passwordText">Type your password :</string>
    <string name="emailText">Enter your email address :</string>
    <string name="profileText">Your profile</string>
    <string name="printCursor">The following data depicts the Database information:</string>

</resources>
