<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:layout_weight="1"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/button" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/imageButtonID"
        android:layout_width="208dp"
        android:background="#4AFFFFFF"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="211dp"
        android:layout_height="wrap_content"

        android:text="@string/Switch" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName|textCapWords" />
</GridLayout>