<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/button" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/textView"
        android:layout_alignEnd="@id/button"
        android:layout_alignRight="@id/button"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="-171dp"
        android:layout_marginRight="-171dp"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/imageButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="2dp"
        android:background="#4AFFFFFF"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/checkBox"
        android:layout_alignRight="@id/imageButtonID"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dp"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageButtonID"
        android:layout_marginBottom="-43dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName|textCapWords" />
</RelativeLayout>