<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textView"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkBox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonID"
            style="@android:style/Widget.ImageButton"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4AFFFFFF"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Switch"
            tools:text="Switch on/off" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint"

            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>


</LinearLayout>